# std-algorithm-for-audio

./: CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  build_and_run  build_and_run.sh  main.cpp
